@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10398 2005/06/20 19:22:34 epg Exp $
+$NetBSD: CHANGES,v 1.10399 2005/06/20 20:11:13 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 	
@@ -2930,3 +2930,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated security/audit-packages to 1.37 [tron 2005-06-20]
 	Updated security/heimdal to 0.6.5 [lha 2005-06-20]
 	Updated www/trac to 0.8.4 [epg 2005-06-20]
+	Updated security/sudo to 1.6.8pl9 [jlam 2005-06-20]
